add code in files types: ,.css,.map,.scss,.yml,.js,.json,.svg,.html,.lock remove code in files types: ,.scss,.json,.html,.svg,.js,.lock

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>egeueegpyu gnrxaovvwo gcubmituff lxtdmvkjgc</div>
+  <div>nsrreamaxi vcybvoemrg</div>
 </body>
 </html>
