add code in files types: ,.md,.json,.html,.txt,.jsx,.css,.js remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -3,5 +3,6 @@
 <head></head>
 <body>
   <div>bsdkbffkbh tpuufabjde ohsglbjsvv</div>
+  <div>mfbynonrlw ascedjmdss kjpwnomdre dsotefouvn dnkxewhoor iwuxijflxe ddandialkr uuxqcbupva lydtdkelvr</div>
 </body>
 </html>
