add code in files types: ,.md,.json,.html,.txt,.jsx,.css,.js remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -4,5 +4,6 @@
 <body>
   <div>bsdkbffkbh tpuufabjde ohsglbjsvv</div>
   <div>mfbynonrlw ascedjmdss kjpwnomdre dsotefouvn dnkxewhoor iwuxijflxe ddandialkr uuxqcbupva lydtdkelvr</div>
+  <div>yaflcukerg ncytafpbka sfyefgbtdx xkdempgvfe bfluhcbkew fdokypjgno omyrftubkf iypwlfjnas lmtbbaeiod ilaauyulmc</div>
 </body>
 </html>
