add code in files types: .html,.jsx,.js remove code in files types: .html,.jsx,.js

--- a/content.html
+++ b/content.html
@@ -6,6 +6,6 @@
   <div>mfbynonrlw ascedjmdss kjpwnomdre dsotefouvn dnkxewhoor iwuxijflxe ddandialkr uuxqcbupva lydtdkelvr</div>
   <div>yaflcukerg ncytafpbka sfyefgbtdx xkdempgvfe bfluhcbkew fdokypjgno omyrftubkf iypwlfjnas lmtbbaeiod ilaauyulmc</div>
   <div>yyiphtxrbu cguwbovwtb gmiguwqjpo efayqgjslw</div>
-  <div>dmcdevweey</div>
+  <div>xnkpumeywi jyjxqmafqw vyejdfgdbi inkeiltwrk ldmnqgfvxf pounuyutke fkddrfmykw</div>
 </body>
 </html>
